# dagster-databricks-components-demo

./: .gitignore  Makefile  README.md  pyproject.toml
src/dagster_databricks_components_demo/components/: databricks_job_component.py
src/dagster_databricks_components_demo/defs/: analytics.py  asset_checks.py  assets.py  constants.py
src/dagster_databricks_components_demo/defs/databricks_job/: defs.yaml
src/dagster_databricks_components_demo/defs/databricks_job_hello_world/: defs.yaml
src/dagster_databricks_components_demo/scripts/: run_databricks_job.py
